改寫標題動畫

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="row">
               <div class="col-lg-11">
 
-                <h1>I'm Professional <span class="typed-words"></span></h1>
+                <h1> <span class="typed-words"></span></h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <p><a href="#contact-section" class="btn btn-warning px-5 py-3 text-white smoothscroll">Contact Me</a></p>
               </div>
@@ -540,7 +540,7 @@
   <script src="js/typed.js"></script>
             <script>
             var typed = new Typed('.typed-words', {
-            strings: [" Business Speakers", " Life Coach"],
+            strings: [" 女性在森林裡，多數竟然選擇熊而不是男性!?"],
             typeSpeed: 80,
             backSpeed: 80,
             backDelay: 4000,
