--- a/index.html
+++ b/index.html
@@ -111,31 +111,21 @@
         
         <div class="row">
           
-          <div class="col-md-5 mr-auto mb-5">
-            <h2 class="text-black mb-4">Welcome To My Website</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem, temporibus accusamus placeat recusandae laudantium id quia obcaecati explicabo ea commodi.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro neque, delectus labore incidunt voluptate possimus? Necessitatibus amet nobis sapiente recusandae illo omnis quam quis corrupti. Eveniet veniam velit sunt pariatur..</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae est molestias illum illo ducimus nisi molestiae amet quae, dolor fugiat perferendis facere quibusdam repudiandae, ut modi obcaecati.</p>
+          <div class="col-md-6 mr-auto mb-5">
+            <h2 class="text-black mb-4">SDGs 5. 實現性別平等，賦予婦女權力</h2>
+            <p>5.1　終結所有對婦女和女童的各種形式歧視。</p>
+            <p>5.2　消除在公共和私人領域對女性的各種形式的暴力，包括人口走私、性剝削及其他形式的剝削。</p>
+            <p>5.3　消除各種有害的習俗，例如童婚、未成年結婚、強迫結婚，以及女性割禮。</p>
+            <p>5.4　透過提供公共服務、基礎建設與社會保護政策，認可並重視無償的照護和家務工作，並依各國國情，推動家人應共同分擔家事責任。</p>
+            <p>5.5　確保婦女能充分、有效地參與政治、經濟、公共決策，並在各層級都享有參與決策領導的平等機會。</p>
           </div>
-          <div class="col-md-6 ml-auto">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="service px-0">
-                  <div class="icon"><span class="flaticon-money-bag-with-dollar-symbol display-2 text-primary"></span></div>
-                  <h4 class="text-black mb-3">Means of Living</h4>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-                    texts.</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="service px-0">
-                  <div class="icon"><span class="flaticon-manager display-2 text-primary"></span></div>
-                  <h4 class="text-black mb-3">Transform Lives</h4>
-                  <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind
-                    texts.</p>
-                </div>
-              </div>
-            </div>
+          <div class="col-md-6 mr-auto mb-5">
+            <h2 class="text-black mb-4">&nbsp;</h2>
+            <p>5.6　根據國際人口與發展會議（ICPD）行動計畫、北京行動平台，及其檢討成果書，確保人民普遍享有性、生育健康與生育權利。</p>
+            <p>5.a　根據國家法律進行改革，賦予婦女平等的經濟資源權利，以及獲得土地與其他形式的財產、金融服務、繼承與自然資源的所有權與掌控權。</p>
+            <p>5.b　加強科技使用能力，特別是資訊與通訊技術（ICT），以提升婦女權力。
+            <p>5.c　採用及強化完善的政策與可執行的立法，以促進兩性平等，並提升各個階層女性的權力。</p>
+          </div>
           </div>
         </div>
 
