--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
           <div class="training">
             <figure class="mb-4"><img src="images/coach_3_sm.jpg" alt="Image" class="img-fluid"></figure>
-            <h3 class="text-black mb-3">文化和媒體中的性別刻板印象：s</h3>
+            <h3 class="text-black mb-3">文化和媒體中的性別刻板印象</h3>
             <p>媒體和流行文化中對女性的刻板印象和性別角色的定型，影響了社會對女性能力和角色的看法。這些刻板印象可能限制女性的自我表現和職業選擇。</p>
           </div>
         </div>
