更改標題與副標

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!doctype html>
 <html lang="en">
   <head>
     <title>Coaching &mdash; Website Template by Colorlib</title>
@@ -82,7 +82,7 @@
               <div class="col-lg-11">
 
                 <h1> <span class="typed-words"></span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>預計世界將難以達成聯合國在2030年前實現性別平等的目標。</p>
                 <p><a href="#contact-section" class="btn btn-warning px-5 py-3 text-white smoothscroll">Contact Me</a></p>
               </div>
               
@@ -529,7 +529,7 @@
   <script src="js/typed.js"></script>
             <script>
             var typed = new Typed('.typed-words', {
-            strings: [" 女性在森林裡，多數竟然選擇熊而不是男性!?"],
+            strings: ["男女平等十年來停滯不前四分一人認為「男人毆打妻子合理」!?"],
             typeSpeed: 80,
             backSpeed: 80,
             backDelay: 4000,
