--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
 
         <div class="nonloop-block-13 owl-style owl-carousel">
           <div class="training">
-            <figure class="mb-4"><img src="images/coach_1_sm.jpg" alt="Image" class="img-fluid"></figure>
+            <figure class="mb-4"><img src="images/coach_1_sm_.jpg" alt="Image" class="img-fluid"></figure>
             <h3 class="text-black mb-3">性別暴力和騷擾</h3>
             <p>許多社會對性別暴力和騷擾缺乏有效的法律保護和執行機制。</p>
           </div>
 
           <div class="training">
-            <figure class="mb-4"><img src="images/coach_2_sm.jpg" alt="Image" class="img-fluid"></figure>
+            <figure class="mb-4"><img src="images/coach_5_sm.jpg" alt="Image" class="img-fluid"></figure>
             <h3 class="text-black mb-3">職場不平等</h3>
             <p>女性在薪資差距、職位晉升、職場歧視受到嚴重的不平等。</p>
           </div>
@@ -162,7 +162,7 @@
           </div>
 
           <div class="training">
-            <figure class="mb-4"><img src="images/coach_1_sm.jpg" alt="Image" class="img-fluid"></figure>
+            <figure class="mb-4"><img src="images/coach_6_sm.jpg" alt="Image" class="img-fluid"></figure>
             <h3 class="text-black mb-3">政治參與不足</h3>
             <p>女性在政治領域的代表性不足，參與決策的機會較少。政治體系和選舉過程中可能存在性別偏見，影響女性候選人的競選機會。</p>
           </div>
@@ -174,7 +174,7 @@
           </div>
 
           <div class="training">
-            <figure class="mb-4"><img src="images/coach_3_sm.jpg" alt="Image" class="img-fluid"></figure>
+            <figure class="mb-4"><img src="images/coach_7_sm.jpg" alt="Image" class="img-fluid"></figure>
             <h3 class="text-black mb-3">文化和媒體中的性別刻板印象</h3>
             <p>媒體和流行文化中對女性的刻板印象和性別角色的定型，影響了社會對女性能力和角色的看法。這些刻板印象可能限制女性的自我表現和職業選擇。</p>
           </div>
