更改大按鈕

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
   <!doctype html>
 <html lang="en">
   <head>
-    <title>Coaching &mdash; Website Template by Colorlib</title>
+    <title>SDGs 5 性別平權</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -46,14 +46,14 @@
         <div class="row align-items-center">
           
           <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Coaching<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">SDGs 5 <span class="text-primary">.</span> </a></h1>
           </div>
 
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="#home-section" class="nav-link">Home</a></li>
+                <li><a href="#home-section" class="nav-link">主頁</a></li>
                 <li><a href="#about-section" class="nav-link">條例</a></li>
                 <li><a href="#training-section" class="nav-link">問題</a></li>
                 <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
