--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <div class="row">
           <div class="col-12" style="margin-top: -20%;">
             <div class="slide-one-item home-slider owl-carousel">
-              <img src="images/coach_hero_1.jpg" alt="Image" class="img-fluid img">
-              <img src="images/coach_hero_2.jpg" alt="Image" class="img-fluid img">
+              <img src="images/free_nipple.jpg" alt="Image" class="img-fluid img">
+              <img src="images/MeToo.png" alt="Image" class="img-fluid img">
             </div>
           </div>
         </div>
