--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </blockquote>
 
                 <figure>
-                  <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                  <img src="images/zack.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                 </figure>
                 <h3 class="font-size-20 text-black">王則文</h3>
               </div>
@@ -222,7 +222,7 @@
                 </blockquote>
 
                 <figure>
-                  <img src="images/person_2.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                  <img src="images/chienw-01.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                 </figure>
                 <h3 class="font-size-20 mb-4 text-black">錢卜巖</h3>
 
@@ -239,7 +239,7 @@
                 </blockquote>
 
                 <figure>
-                  <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                  <img src="images/roiii.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                 </figure>
                 <h3 class="font-size-20 text-black">陳怡煣</h3>
 
