--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <li><a href="#home-section" class="nav-link">主頁</a></li>
                 <li><a href="#about-section" class="nav-link">條例</a></li>
                 <li><a href="#training-section" class="nav-link">問題</a></li>
-                <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-                <li><a href="#services-section" class="nav-link">Services</a></li>
+                <li><a href="#testimonials-section" class="nav-link">觀點</a></li>
+                <li><a href="#services-section" class="nav-link">方法</a></li>
                 <li><a href="#blog-section" class="nav-link">Blog</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
