--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <div class="container">
         <div class="row align-items-center">
           
-          <div class="col-6 col-xl-2">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">SDGs 5<span class="text-primary"></span> </a></h1>
+          <div class="col-6 col-xl-4">
+            <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">SDGs 5 性別平權<span class="text-primary"></span> </a></h1>
           </div>
 
-          <div class="col-12 col-md-10 d-none d-xl-block">
+          <div class="col-12 col-md-8 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
 
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
@@ -480,8 +480,7 @@
             <div class="border-top pt-5">
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               <p>Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
-                  class="icon-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                <script>document.write(new Date().getFullYear());</script> All rights reserved</p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         
             </div>
