--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@
         
       </div>
     </section>
-  
 
     <section class="site-section bg-light" id="training-section">
       <div class="container">
@@ -252,11 +251,11 @@
 
 
                 <blockquote class="mb-4">
-                  <p>&ldquo;Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est maxime adipisci incidunt voluptatum pariatur. Officia eaque ipsum ducimus. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.&rdquo;</p>
+                  <p>&ldquo;性別平等是社會發展的基石，也是城市發展程度的高低指標，應受全面重視與支持。&rdquo;</p>
                 </blockquote>
 
                 <figure>
-                  <img src="images/person_3.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
+                  <img src="images/yz_3.jpg" alt="Image" class="img-fluid rounded-circle mx-auto">
                 </figure>
                 <h3 class="font-size-20 mb-4 text-black">林以筑</h3>
 
