移除contact us＆修改底部資訊

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
                 <li><a href="#testimonials-section" class="nav-link">觀點</a></li>
                 <li><a href="#services-section" class="nav-link">方法</a></li>
                 <li><a href="#blog-section" class="nav-link">Blog</a></li>
-                <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -374,60 +373,6 @@
       </div>
     </section>
 
-    <div class="site-section bg-light" id="contact-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 text-center mb-5">
-            <h2 class="text-black">Contact Me</h2>
-          </div>
-        </div>
-        <div class="row mb-5">
-          <div class="mb-4 mb-lg-0 col-md-6 col-lg-4">
-            <p class="mb-0 font-weight-bold text-primary">Address</p>
-            <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA
-          </div>
-          <div class="mb-4 mb-lg-0 col-md-6 col-lg-4">
-            <p class="mb-0 font-weight-bold text-primary">Phone</p>
-            <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
-          </div>
-          <div class="mb-4 mb-lg-0 col-md-6 col-lg-4">
-            <p class="mb-0 font-weight-bold text-primary">Email Address</p>
-            <p class="mb-0"><a href="#">youremail@domain.com</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 mb-5">
-            <form action="#" method="post">
-              <div class="form-group row">
-                <div class="col-md-6 mb-3 mb-md-0">
-                  <input type="text" class="form-control" placeholder="First name">
-                </div>
-                <div class="col-md-6">
-                  <input type="text" class="form-control" placeholder="First name">
-                </div>
-              </div>
-
-              <div class="form-group row">
-                <div class="col-md-12">
-                  <input type="text" class="form-control" placeholder="Email address">
-                </div>
-              </div>
-
-              <div class="form-group row">
-                <div class="col-md-12">
-                  <textarea name="" id="" class="form-control" placeholder="Write your message." cols="30" rows="10"></textarea>
-                </div>
-              </div>
-              <div class="form-group row">
-                <div class="col-md-6 mr-auto">
-                  <input type="submit" class="btn btn-block btn-primary text-white py-2 px-5" value="Send Message">
-                </div>
-              </div>
-            </form>
-          </div>
-          
-        </div>
-      </div>
     </div>
 
     
@@ -436,42 +381,21 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <h2 class="footer-heading mb-4">About Coaching</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem officiis dolorem assumenda alias mollitia reprehenderit dolor facilis.</p>
+            <h2 class="footer-heading mb-4">關於性別平權</h2>
+            <p>性別平權是個嚴肅的問題，而如此龐大的願景，也需要透過教育、宣導來傳遞正確的觀念，進而讓大眾合作達成性別平權</p>
           </div>
 
 
-          <div class="col-md-3 ml-auto">
-            <h2 class="footer-heading mb-4">Quick Links</h2>
+          <div class="col-md-4 ml-auto">
+            <h2 class="footer-heading mb-4">快速連結</h2>
             <ul class="list-unstyled">
-              <li><a href="#about-section" class="smoothscroll">About Us</a></li>
-              <li><a href="#training-section" class="smoothscroll">Our Training</a></li>
-              <li><a href="#services-section" class="smoothscroll">Services</a></li>
-              <li><a href="#testimonials-section" class="smoothscroll">Testimonials</a></li>
-              <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
+              <li><a href="#about-section" class="smoothscroll">性別平權條例</a></li>
+              <li><a href="#training-section" class="smoothscroll">性別平權問題</a></li>
+              <li><a href="#testimonials-section" class="smoothscroll">組員觀點</a></li>
+              <li><a href="#services-section" class="smoothscroll">解決方法</a></li>
             </ul>
           </div>
 
-          <div class="col-md-4">
-            <div class="mb-5">
-              <h2 class="footer-heading mb-4">Follow Us</h2>
-              <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
-            </div>
-
-            <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-            <form action="#" method="post" class="footer-subscribe">
-              <div class="input-group mb-3">
-                <input type="text" class="form-control border-secondary text-white bg-transparent" placeholder="Enter Email" aria-label="Enter Email" aria-describedby="button-addon2">
-                <div class="input-group-append">
-                  <button class="btn btn-primary text-black" type="button" id="button-addon2">Send</button>
-                </div>
-              </div>
-            </form>
-
-          </div>
         </div>
 
         <div class="row pt-5 mt-5 text-left">
