--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <div class="service  bg-white">
             <div class="icon"><span class="flaticon-group display-2 text-primary"></span></div>
             <h3 class="text-black mb-3">遇到性別歧視不要沉默</h3>
-            <p>遭受到不平等的待遇應提出並取得協助.</p>
+            <p>遇到不平等待遇應提出並取得協助.</p>
           </div>
     
           <div class="service  bg-white">
