--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                 <a href="single.html"><img src="images/coach_1_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
-                <h3><a href="single.html">臺灣性別暴力防治亞洲首屈一指 國外組團來臺取經</a></h3>
+                <h3>臺灣性別暴力防治亞洲首屈一指 國外組團來臺取經</a></h3>
                 <span class="post-meta mb-3 d-block">2024年6月9日</span>
                 <p>衛生福利部表示，性別平權及性別暴力防治已為世界趨勢與普世價值，非常樂意與其他國家分享臺灣這些年來在各項性別暴力防治工作上的努力與成果，並從與其他國家的交流中，反思與精進現有各項防治工作，期待透過提高大眾性別暴力防治信念及參與、完善預警機制、強化網絡合作，及建立多元深化的服務等，打造暴力零容忍、性別平等及友善被害人的社會環境。</p>
                 <p><a href="#" class=""></a></p>
