--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
               <div class="blog-entry-text">
                 <h3>臺灣性別暴力防治亞洲首屈一指 國外組團來臺取經</a></h3>
                 <span class="post-meta mb-3 d-block">2024年6月9日</span>
-                <p>衛生福利部表示，性別平權及性別暴力防治已為世界趨勢與普世價值，非常樂意與其他國家分享臺灣這些年來在各項性別暴力防治工作上的努力與成果，並從與其他國家的交流中，反思與精進現有各項防治工作，期待透過提高大眾性別暴力防治信念及參與、完善預警機制、強化網絡合作，及建立多元深化的服務等，打造暴力零容忍、性別平等及友善被害人的社會環境。</p>
+                <p>衛生福利部表示，性別平權及性別暴力防治已為世界趨勢與普世價值，非常樂意與其他國家分享臺灣這些年來在各項性別暴力防治工作上的努力與成果，並從與其他國家的交流中，反思與精進現有各項防治工作。</p>
                 <p><a href="#" class=""></a></p>
               </div>
             </div>
@@ -334,10 +334,10 @@
                 <a href="single.html"><img src="images/coach_2_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
-                <h3><a href="single.html">Coaching Life Is Better Than Schooling</a></h3>
-                <span class="post-meta mb-3 d-block">April 17, 2019</span>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est maxime adipisci incidunt voluptatum pariatur. Officia eaque ipsum ducimus.</p>
-                <p><a href="#" class="">Read More..</a></p>
+                <h3>兩性同酬日2/23 婦團籲政黨兌現薪資透明化承諾</a></h3>
+                <span class="post-meta mb-3 d-block">2024年3月7日</span>
+                <p>婦女新知表示，針對縮減性別薪資差距，目前在國會有立委席次的民進黨及民眾黨選前皆承諾修法明訂薪資透明化，兩黨委員加總已經過半，理應有機會在兩黨合作下共同推動該法。</p>
+                <p><a href="#" class=""></a></p>
               </div>
             </div>
           </div>
