--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
                 <a href="single.html"><img src="images/coach_3_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
-                <h3><a href="single.html">Coaching Life Is Better Than Schooling</a></h3>
-                <span class="post-meta mb-3 d-block">April 17, 2019</span>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est maxime adipisci incidunt voluptatum pariatur. Officia eaque ipsum ducimus.</p>
-                <p><a href="#" class="">Read More..</a></p>
+                <h3>郭台銘被爆曾罵蔡英文「老處女」　府：訝異仍有如此缺乏性平意識言論</a></h3>
+                <span class="post-meta mb-3 d-block">2023年8月31日</span>
+                <p>林聿禪今日下午回應媒體詢問時則表示驚訝在現代社會仍有此缺乏性平意識言論，台灣已是國際注目的進步國家，期待相關公眾人物多自我惕勵，除強化個人性平意識，並涵養尊重與識見，以維護台灣的共同形象。</p>
+                <p><a href="#" class=""></a></p>
               </div>
             </div>
           </div>
@@ -361,10 +361,10 @@
                 <a href="single.html"><img src="images/coach_2_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
-                <h3><a href="single.html">Coaching Life Is Better Than Schooling</a></h3>
-                <span class="post-meta mb-3 d-block">April 17, 2019</span>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est maxime adipisci incidunt voluptatum pariatur. Officia eaque ipsum ducimus.</p>
-                <p><a href="#" class="">Read More..</a></p>
+                <h3>關注運動性別平權 新竹縣4月舉辦體壇女性攝影展</a></h3>
+                <span class="post-meta mb-3 d-block">2024年3月23日</span>
+                <p>新竹縣竹北新瓦屋客家文化保存區和區內的「或者書店」將從4月1日起到15日為止，將以女力為題，舉辦「Women in Sports女性在體壇國際攝影展」，透過攝影作品，展現台灣近年對運動領域女權的重視。</p>
+                <p><a href="#" class=""></a></p>
               </div>
             </div>
           </div>
