--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
               </figure>
               <div class="blog-entry-text">
                 <h3>臺灣性別暴力防治亞洲首屈一指 國外組團來臺取經</a></h3>
-                <span class="post-meta mb-3 d-block">2024年6月9日</span>
+                <span class="post-meta mb-3 d-block"></span>
                 <p>衛生福利部表示，性別平權及性別暴力防治已為世界趨勢與普世價值，非常樂意與其他國家分享臺灣這些年來在各項性別暴力防治工作上的努力與成果，並從與其他國家的交流中，反思與精進現有各項防治工作。</p>
                 <p><a href="#" class=""></a></p>
               </div>
@@ -335,7 +335,7 @@
               </figure>
               <div class="blog-entry-text">
                 <h3>兩性同酬日2/23 婦團籲政黨兌現薪資透明化承諾</a></h3>
-                <span class="post-meta mb-3 d-block">2024年3月7日</span>
+                <span class="post-meta mb-3 d-block"></span>
                 <p>婦女新知表示，針對縮減性別薪資差距，目前在國會有立委席次的民進黨及民眾黨選前皆承諾修法明訂薪資透明化，兩黨委員加總已經過半，理應有機會在兩黨合作下共同推動該法。</p>
                 <p><a href="#" class=""></a></p>
               </div>
@@ -349,7 +349,7 @@
               </figure>
               <div class="blog-entry-text">
                 <h3>郭台銘被爆曾罵蔡英文「老處女」　府：訝異仍有如此缺乏性平意識言論</a></h3>
-                <span class="post-meta mb-3 d-block">2023年8月31日</span>
+                <span class="post-meta mb-3 d-block"></span>
                 <p>林聿禪今日下午回應媒體詢問時則表示驚訝在現代社會仍有此缺乏性平意識言論，台灣已是國際注目的進步國家，期待相關公眾人物多自我惕勵，除強化個人性平意識，並涵養尊重與識見，以維護台灣的共同形象。</p>
                 <p><a href="#" class=""></a></p>
               </div>
@@ -362,7 +362,7 @@
               </figure>
               <div class="blog-entry-text">
                 <h3>關注運動性別平權 新竹縣4月舉辦體壇女性攝影展</a></h3>
-                <span class="post-meta mb-3 d-block">2024年3月23日</span>
+                <span class="post-meta mb-3 d-block"></span>
                 <p>新竹縣竹北新瓦屋客家文化保存區和區內的「或者書店」將從4月1日起到15日為止，將以女力為題，舉辦「Women in Sports女性在體壇國際攝影展」，透過攝影作品，展現台灣近年對運動領域女權的重視。</p>
                 <p><a href="#" class=""></a></p>
               </div>
