--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <div class="col-md-6 mb-4" data-aos="fade-up"  data-aos-delay="">
             <div class="d-lg-flex blog-entry">
               <figure class="mr-4">
-                <a href="single.html"><img src="images/coach_1_sm.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="https://tw.news.yahoo.com/%E8%87%BA%E7%81%A3%E6%80%A7%E5%88%A5%E6%9A%B4%E5%8A%9B%E9%98%B2%E6%B2%BB%E4%BA%9E%E6%B4%B2%E9%A6%96%E5%B1%88-%E6%8C%87-%E5%9C%8B%E5%A4%96%E7%B5%84%E5%9C%98%E4%BE%86%E8%87%BA%E5%8F%96%E7%B6%93-060410778.html"><img src="images/coach_1_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
                 <h3>臺灣性別暴力防治亞洲首屈一指 國外組團來臺取經</a></h3>
@@ -331,7 +331,7 @@
           <div class="col-md-6 mb-4" data-aos="fade-up"  data-aos-delay="100">
             <div class="d-lg-flex blog-entry">
               <figure class="mr-4">
-                <a href="single.html"><img src="images/coach_2_sm.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="https://www.cna.com.tw/news/ahel/202403070303.aspx"><img src="images/coach_2_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
                 <h3>兩性同酬日2/23 婦團籲政黨兌現薪資透明化承諾</a></h3>
