--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <div class="col-md-6 mb-4" data-aos="fade-up"  data-aos-delay="">
             <div class="d-lg-flex blog-entry">
               <figure class="mr-4">
-                <a href="single.html"><img src="images/coach_3_sm.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="https://www.storm.mg/article/4862142"><img src="images/coach_3_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
                 <h3>郭台銘被爆曾罵蔡英文「老處女」　府：訝異仍有如此缺乏性平意識言論</a></h3>
@@ -358,7 +358,7 @@
           <div class="col-md-6 mb-4" data-aos="fade-up"  data-aos-delay="100">
             <div class="d-lg-flex blog-entry">
               <figure class="mr-4">
-                <a href="single.html"><img src="images/coach_2_sm.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="https://news.ltn.com.tw/news/art/breakingnews/4617255"><img src="images/coach_2_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
                 <h3>關注運動性別平權 新竹縣4月舉辦體壇女性攝影展</a></h3>
