--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li><a href="#training-section" class="nav-link">問題</a></li>
                 <li><a href="#testimonials-section" class="nav-link">觀點</a></li>
                 <li><a href="#services-section" class="nav-link">方法</a></li>
-                <li><a href="#blog-section" class="nav-link">Blog</a></li>
+                <li><a href="#blog-section" class="nav-link">相關新聞</a></li>
               </ul>
             </nav>
           </div>
