--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <a href="https://www.storm.mg/article/4862142"><img src="images/news3_sm.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
-                <h3>郭台銘被爆曾罵蔡英文「老處女」　府：訝異仍有如此缺乏性平意識言論</a></h3>
+                <h3>郭台銘被爆曾罵蔡英文「老處女」政府：訝異仍有如此缺乏性平意識言論</a></h3>
                 <span class="post-meta mb-3 d-block"></span>
                 <p>林聿禪今日下午回應媒體詢問時則表示驚訝在現代社會仍有此缺乏性平意識言論，台灣已是國際注目的進步國家，期待相關公眾人物多自我惕勵，除強化個人性平意識，並涵養尊重與識見，以維護台灣的共同形象。</p>
                 <p><a href="#" class=""></a></p>
