更改聯繫我按鈕

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li><a href="#training-section" class="nav-link">問題</a></li>
                 <li><a href="#testimonials-section" class="nav-link">觀點</a></li>
                 <li><a href="#services-section" class="nav-link">方法</a></li>
-                <li><a href="#blog-section" class="nav-link">相關新聞</a></li>
+                <li><a href="#blog-section" class="nav-link">新聞</a></li>
               </ul>
             </nav>
           </div>
@@ -82,7 +82,6 @@
 
                 <h1> <span class="typed-words"></span></h1>
                 <p>預計世界將難以達成聯合國在2030年前實現性別平等的目標。</p>
-                <p><a href="#contact-section" class="btn btn-warning px-5 py-3 text-white smoothscroll">Contact Me</a></p>
               </div>
               
             </div>
@@ -393,6 +392,7 @@
               <li><a href="#training-section" class="smoothscroll">性別平權問題</a></li>
               <li><a href="#testimonials-section" class="smoothscroll">組員觀點</a></li>
               <li><a href="#services-section" class="smoothscroll">解決方法</a></li>
+              <li><a href="#blog-section" class="smoothscroll">相關新聞</a></li>
             </ul>
           </div>
 
