第三篇新聞圖片

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           <div class="col-md-6 mb-4" data-aos="fade-up"  data-aos-delay="">
             <div class="d-lg-flex blog-entry">
               <figure class="mr-4">
-                <a href="https://www.storm.mg/article/4862142"><img src="images/news3_sm.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="https://www.storm.mg/article/4862142"><img src="images/goodtiming.jpeg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
                 <h3>郭台銘被爆曾罵蔡英文「老處女」政府：訝異仍有如此缺乏性平意識言論</a></h3>
