--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           <div class="col-md-6 mb-4" data-aos="fade-up"  data-aos-delay="100">
             <div class="d-lg-flex blog-entry">
               <figure class="mr-4">
-                <a href="https://art.ltn.com.tw/article/breakingnews/4617255"><img src="images/news4_sm.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="https://art.ltn.com.tw/article/breakingnews/4617255"><img src="images/跳舞女.jpg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
                 <h3>關注運動性別平權 新竹縣4月舉辦體壇女性攝影展</a></h3>
