--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <div class="col-md-6 mb-4" data-aos="fade-up"  data-aos-delay="100">
             <div class="d-lg-flex blog-entry">
               <figure class="mr-4">
-                <a href="https://www.cna.com.tw/news/ahel/202403070303.aspx"><img src="images/new2_sm.jpg" alt="Image" class="img-fluid rounded"></a>
+                <a href="https://www.cna.com.tw/news/ahel/202403070303.aspx"><img src="images/婦女.jpeg" alt="Image" class="img-fluid rounded"></a>
               </figure>
               <div class="blog-entry-text">
                 <h3>兩性同酬日2/23 婦團籲政黨兌現薪資透明化承諾</a></h3>
