--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <link rel="stylesheet" href="css/style.css">
     
+    <!-- 網站圖示 -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300" id="home-section">
   
